﻿[B]Version 5.0.13 - 2021-02-27[/B]
- Adding old PR's + minor fixes. last update before kodi 19 and python3
- Change for request-cache for storing web requests locally (in 8hours) #34
- Fix missing thumbnails and added option in settings to choose fan-art image size #29 #35
- Fixed themes menu item #34
- Add support for other plugins to start live tv. #31
- Update logos and entry screen #24
- Change subtitle handling to local srt files, so user also can change for hard-of-hearing subs and change while watching #36

﻿[B]Version 5.0.12 - 2018-02-05[/B]
- Updated copyright(readded) + added new strings.po language format for EN/DA translations.

[B]Version 5.0.11 - 2018-02-05[/B]
- Fixing encrypted streams - Thanks to @krogsbell on the kodi forums.
- Moving "ownership" of the addon, hence Tommy have stopped developing on the addon.

[B]Version 5.0.10 - 2017-11-01[/B]
- Rollback to DR API v1.2

[B]Version 5.0.9 - 2017-10-31[/B]
- Fix https streams from DR
- Fix subtitles
- Step DR API to v1.4

[B]Version 5.0.8 - 2014-12-04[/B]
- Added themes / repremieres as seen on dr.dk/tv

[B]Version 5.0.7 - 2014-10-29[/B]
- Added description to video clips
- Fixed problem when searching for text with special characters

[B]Version 5.0.6 - 2014-10-05[/B]
- Gracefully handle error when video clip is no longer available for playback

[B]Version 5.0.5 - 2014-10-02[/B]
- Changed cache period of latest programs to five minutes (instead of a full day)

[B]Version 5.0.4 - 2014-09-16[/B]
- Fixed favorite program series
- Added "Clear favorite program series" in the settings to fix broken favorites list
- Re-added latest programs

[B]Version 5.0.3 - 2014-09-02[/B]
- Added 'Show area chooser' to context menu
- Fixed problem with recently watched when the slug no longer exists on the server

[B]Version 5.0.2 - 2014-07-29[/B]
- Added optional area chooser
  Set default area in addon settings

[B]Version 5.0.1 - 2014-06-02[/B]
- Fixed problem parsing certain dates
